# Movement

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: CMakeLists.txt
Source/Game/: CMakeLists.txt
Source/Game/Source/: Game.cpp
Source/Game/Source/Movement/: Movement.cpp  Movement.h
Source/Game/Source/Movement/Cameras/: CameraGlider.cpp  CameraGlider.h
Source/Game/Source/Movement/Glider/: Glider.cpp  Glider.h  GliderParams.cpp  GliderParams.h  Weapon.cpp  Weapon.h
Source/Resources/: Resources.cpp
Source/Resources/Files/Movement/Maps/PhysX/: MapGreen.json  MapMountainousRelief.json  MapPhysX.json
Source/Resources/Files/Movement/Models/: Models.json
Source/Resources/Files/Movement/Shaders/: Default.frag  Default.vert  Line.frag  Line.vert  LineP.vert  LinePM.vert
